--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: bisque;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f5f5f5;
 }
