Add the index.js and api.js

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
 #score-list {
   border: 2px solid #000;
   width: 20vw;
-  height: auto;
+  height: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
