--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #e0afaf;
   font-weight: 700;
   display: flex;
   flex-direction: column;
@@ -25,22 +25,19 @@ body {
   padding: 40px;
 }
 
-#score-list {
-  border: 2px solid #000;
-  width: 20vw;
-  height: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
-}
-
-#score-list li {
+.score-list li {
   list-style: none;
-  padding: 10px;
+  padding: 8px;
   border-bottom: 1px solid #000;
 }
 
+.score-list li:nth-of-type(odd) {
+  background-color: #5cce5c;
+}
+
+.score-list li:nth-of-type(even) {
+  background-color: #5c9cce;
+}
 .add-score input {
   padding: 10px;
   width: auto;
@@ -61,6 +58,90 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 100px;
   margin-bottom: 20px;
+}
+h1 {
+  color: rgb(255, 102, 0);
+  font-weight: bold;
+  text-shadow: 3px 2px black;
+}
+
+h3 {
+  color: rgb(255, 102, 0);
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+#refresh-btn {
+  /* width: 100px; */
+  padding: 4px;
+  margin-top: 20px;
+  margin-left: 106px;
+  background-color: black;
+  border: 1px solid black;
+  color: white;
+  font-size: larger;
+  border-radius: 13px;
+}
+
+button {
+  background-color: black;
+  border: 1px solid black;
+  color: white;
+  font-size: larger;
+  border-radius: 13px;
+  padding: 8px;
+  width: 90px;
+}
+
+/* Mobile View */
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    width: 90%;
+  }
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    margin-right: 70px;
+    text-align: center;
+  }
+  #score-list {
+    width: 100%;
+  }
+  .add-score {
+    width: 100%;
+  }
+  #submit-btn {
+    margin-right: 0;
+    margin-left: 106px;
+  }
+}
+/* Desktop view */
+
+@media screen and (min-width: 769px) {
+  .container {
+    width: 70%;
+  }
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    margin-right: 231px;
+    text-align: center;
+  }
+  .score-list {
+    width: 35vw;
+  }
+  .add-score {
+    width: 50%;
+  }
+  #submit-btn {
+    align-self: flex-end;
+    width: 80px;
+    margin-right: 93px;
+    padding: 4px;
+    margin-top: 20px;
+    margin-left: 106px;
+  }
 }
